--- a/Cloudformation/template.yaml
+++ b/Cloudformation/template.yaml
@@ -664,7 +664,7 @@ Resources:
                   "--file.$": "$$.Execution.Input.detail.object.key",
                   "--bucket.$": "$$.Execution.Input.detail.bucket.name"
                 }
-            End: DataQualityRulesetClaims
+            Next: DataQualityRulesetClaims
           DataQualityRulesetClaims:
             Type: Task
             Resource: arn:aws:states:::aws-sdk:glue:startDataQualityRulesetEvaluationRun
